2004-05-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Only show the "Drop here" tooltip when the coverdb is finished loading.

2004-05-05  Peter Johanson  <latexer@gentoo.org>
            Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/Makefile.am:
	A src/muine.exe.config.in:
	* src/muine.in:

	Support latest Mono and Gtk#.

2004-05-01  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-04-28  Samúel Jón Gunnarsson  <sammi@techattack.nu>

	* configure.in: Added "is" to ALL_LINGUAS.

2004-04-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Optimize closing windows.

2004-04-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/Song.cs:

	Refactor sort & search key generation.

2004-04-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Use an idle for performing the searches. Searching is much more
	responsive now.

2004-04-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/Song.cs:

	Include album name in search key.

2004-04-26  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* libmuine/player-xine.c: (load_audio_out_driver),
	(player_construct):

	Load audio driver from xine-config.

2004-04-25  Crispin Flowerday  <gnome@flowerday.cx>
            Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/mm-keys.c: (mmkeys_class_init), (mmkeys_init),
	(filter_mmkeys):
	* src/MmKeys.cs:
	* src/PlaylistWindow.cs:

	Make the "Stop" multimedia key pause playback.

	(Did some general mmkey code cleanup --Jorn)

2004-04-25  Lee Willis  <lee@leewillis.co.uk>

	* data/muine.schemas.in:
	* src/CoverDatabase.cs:

	Add a GConf key for using different amazon backends.

2004-04-25  Crispin Flowerday  <gnome@flowerday.cx>

	* src/CoverDatabase.cs:

	Catch exceptions from the Pixbuf ctor.

2004-04-25  Jorn Baayen  <jbaayen@gnome.org>

	* src/Player.cs:

	Make seek reload the stream when it has been stopped.
